tests/NormalTests/paczka1/fuzzy1/34834695.err
Error in line 5: Eew0O0 S321 16,8
Error in line 3: PNux44 S176 86,1
Error in line 22: XzZsN8CK S107 38,0
Error in line 28: XzZsN8CK S321 57,5
Error in line 38: PNux44 S497 24,8
Error in line 39: PNux44 S107 43,6
